--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- Asidebar section -->
         <aside class="asidebar_section">
 
-            <img width="370" src="img/Photo2.jpg" alt="Photo">
+            <img width="370" src="Photo2.jpg" alt="Photo">
 
             <!-- My contacts section -->
                 <div class="contact_section">
