--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                              <li class="projects_item">
                                     <span class="My_projects_text">
-                                         <a href="https://cryptohub.goit.global/" class="my_projects_link">https://github.com/AlekseyNN8/</a>
+                                         <a href="https://github.com/AlekseyNN8" class="my_projects_link">https://github.com/AlekseyNN8/</a>
                                           .......................
                                           <span class="my_scobka">[</span> GIT Hub <span class="my_scobka">]</span>
                                     </span>
