--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- Asidebar section -->
         <aside class="asidebar_section">
 
-            <img width="300" src="img/3.jpg" alt="Photo">
+            <img width="300" src="3.jpg" alt="Photo">
 
 
             <!-- My contacts section -->
