--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Мое резюме, посмотрите ка" />
+    <meta name="description" content="Мое резюме, Qa engineer" />
     <title>
         Резюме
     </title>
@@ -24,7 +24,7 @@
 
                 <!-- about me section --> 
                 <div class="about_my_section">
-                    <h2 class="about_my_profession"> QA Enjeneer </h2>
+                    <h2 class="about_my_profession"> QA Engineer </h2>
                     <h1 class="name">Козин Алексей</h1>
                     
                     <p class="about_my_discription"> На данный момент успешно прохожу авторский курс Вадима Ксендзова. Так же
