--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <ul class="menu_tech_skills">
                 
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">HTML5, CSS3</span></li>
-                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">(Базовые знания)</span></li>
+                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">Базовые знания</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">GIT</span></li>
                             <li class="menu_tech_item3"><span class="menu_tech_item_text3">Создание репозиториев (локальных, удаленных), клонирование, создание, удаление веток, объединение веток в основную,
                             работа с файлами.
@@ -59,13 +59,13 @@
                             ответа с переданными значениями, запуск и экспорт коллекции
                             the collection</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">Python</span></li>
-                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">(Basic Knowledge)</span></li>
+                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">Basic Knowledge</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">SQL</span></li>
                             <li class="menu_tech_item3"><span class="menu_tech_item_text3">SELECT, DISTINCT, WHERE, COUNT, AVG, SUM, GROUP BY, LIKE, ORDER BY,
                             EXCEPT, JOIN, UNION
                             Oracle, Microsoft SQL Server, PostgreSQL</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">HTTP/HTTPS, TPC/IP, UDP</span></li>
-                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">Понимание></span></li>
+                            <li class="menu_tech_item3"><span class="menu_tech_item_text3">Понимание</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">CheckLists, BugReport</span></li>
                             <li class="menu_tech_item3"><span class="menu_tech_item_text3">Написание чек листов на практике</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">Chrome and Firefox DevTools</span></li>
