--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">Postman</span></li>
                             <li class="menu_tech_item3"><span class="menu_tech_item_text3">Методы GET, POST, PUT, DELETE и др. Передача значений в environment, написание тестов (проверка кода ответа, проверка структуры json, сравнение значений в теле
                             ответа с переданными значениями, запуск и экспорт коллекции
-                            the collection</span></li>
+                            </span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">Python</span></li>
                             <li class="menu_tech_item3"><span class="menu_tech_item_text3">Basic Knowledge</span></li>
                             <li class="menu_tech_item2"><span class="menu_tech_item_text">SQL</span></li>
