--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     <h2 class="about_my_profession"> QA Engineer </h2>
                     <h1 class="name">Козин Алексей</h1>
                     
-                    <p class="about_my_discription"> На данный момент успешно прохожу авторский курс Вадима Ксендзова. Так же
-                    прохожу самостоятельное обучение. Смотрю видео Артема Русова и курсы от "QA START UP". Читаю книгу Майка Макграта
-                    "PYTHON. Программирование для начинающих" и так же изучаю по видео урокам и пишу небольшие программы.
+                    <p class="about_my_discription"> В поиске работы на позицию Mobile QA engineer. Формат работы - удаленный или гибрид. Опыт работы 1 год. Последние полгода тестирую мобильное приложение на базе Android и IOS. Так же Тестирую web. В свободное время изучаю кроссплатформенную разработку на фреймоворке DART. Так же был небольшой опыт написания автотестов на PYTHON и автотесты в постмане. Хочу дальше развивать себя в автостетировании.
 
 
                     </p>
